--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,10 @@ fastapi = "^0.111.0"
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.5.0"
 
+
+[tool.poetry.group.test.dependencies]
+robotframework-databaselibrary = "^1.4.4"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
