Tests: Finish all API demo tests

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,8 @@
         "RobotDatabase",
         "remote",
         "fakerlib"
-    ]
+    ],
+    "robot.variables": {
+        "EXECDIR": "${workspaceFolder}",
+    },
 }
