API: Simplify resource file

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,8 @@
     "robot.libraries.libdoc.needsArgs": [
         "RobotDatabase",
         "remote",
-        "fakerlib"
+        "fakerlib",
+        "API.py",
     ],
     "robot.variables": {
         "EXECDIR": "${workspaceFolder}",
