--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -40,3 +40,9 @@ jobs:
       with:
         report_paths: '**/*.xml'
         include_passed: true
+    - name: Upload Test Report
+      uses: actions/upload-artifact@v4
+      if: always() # always run even if the previous step fails
+      with:
+        name: test-results
+        path: '**/*.html'
